fixed scrollbar disappearing in sidenav

--- a/web/app.css
+++ b/web/app.css
@@ -36,7 +36,7 @@ md-toolbar h1 {
 /* Sidenav area */
 
 md-sidenav {
-    overflow-y: hidden;
+    
 }
 
 md-sidenav md-list {
